# Games_Borrel

./: README.md  pyproject.toml
borrel/: play.ipynb  round1.ipynb  round2.ipynb  round3.ipynb  testing.ipynb
borrel/games/: battleship.py  minority.py  tron.py  wonky_rps.py
borrel/policies/: carlos.py  do.py  dummy.py  ivo.py  jakko.py  mark0.py  mark1.py
