[tool.poetry]
name = "borrel"
version = "0.1.0"
description = ""
authors = ["JRdeLange <jordy.de.lange@planet.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "2.2.5"
pandas = "2.2.3"
scipy = "1.15.2"
ipykernel = "6.29.5"
matplotlib = "3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
